--- a/app/src/main/res/layout/activity_find.xml
+++ b/app/src/main/res/layout/activity_find.xml
@@ -1,69 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.findActivity">
+    tools:context=".activity.findActivity"
+    android:fitsSystemWindows="true"
+    android:id="@+id/drawer_layout">
 
-        <com.yuyakaido.android.cardstackview.CardStackView
-            android:id="@+id/cardStack"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+        <FrameLayout
+            android:id="@+id/content_frame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnApply"
-            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            app:cornerRadius="35dp"
-            app:icon="@drawable/brifcase"
-            app:iconGravity="textStart"
-            app:iconPadding="0dp"
-            app:iconSize="25dp"
-            app:iconTint="@color/white"
-            android:layout_marginBottom="30dp"
-            android:layout_marginEnd="50dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/btnrefuse"
-            app:layout_constraintEnd_toEndOf="parent" />
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnrefuse"
-            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginBottom="30dp"
-            android:layout_marginStart="50dp"
-            app:cornerRadius="35dp"
-            app:icon="@drawable/close"
-            app:iconGravity="textStart"
-            app:iconPadding="0dp"
-            app:iconSize="25dp"
-            app:iconTint="@color/Mint"
-            app:backgroundTint="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btnApply"
-            app:layout_constraintStart_toStartOf="parent" />
+                        <com.yuyakaido.android.cardstackview.CardStackView
+                            android:id="@+id/cardStack"
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.0"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintVertical_bias="0.0" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnsort"
-            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="20dp"
-            app:cornerRadius="28dp"
-            app:icon="@drawable/ellipsis"
-            app:iconGravity="textStart"
-            app:iconPadding="0dp"
-            app:iconSize="10dp"
-            app:iconTint="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/btnApply"
+                            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
+                            android:layout_width="70dp"
+                            android:layout_height="70dp"
+                            app:cornerRadius="35dp"
+                            app:icon="@drawable/brifcase"
+                            app:iconGravity="textStart"
+                            app:iconPadding="0dp"
+                            app:iconSize="25dp"
+                            app:iconTint="@color/white"
+                            android:layout_marginBottom="30dp"
+                            android:layout_marginEnd="50dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toEndOf="@id/btnrefuse"
+                            app:layout_constraintEnd_toEndOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/btnrefuse"
+                            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
+                            android:layout_width="70dp"
+                            android:layout_height="70dp"
+                            android:layout_marginBottom="30dp"
+                            android:layout_marginStart="50dp"
+                            app:cornerRadius="35dp"
+                            app:icon="@drawable/close"
+                            app:iconGravity="textStart"
+                            app:iconPadding="0dp"
+                            app:iconSize="25dp"
+                            app:iconTint="@color/Mint"
+                            app:backgroundTint="@color/white"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toStartOf="@+id/btnApply"
+                            app:layout_constraintStart_toStartOf="parent" />
+
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/btnsort"
+                            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
+                            android:layout_width="32dp"
+                            android:layout_height="32dp"
+                            app:cornerRadius="28dp"
+                            android:layout_margin="20dp"
+                            app:icon="@drawable/ellipsis"
+                            app:iconGravity="textStart"
+                            app:iconPadding="0dp"
+                            app:iconSize="10dp"
+                            app:iconTint="@color/white"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/btnNofication"
+                            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
+                            android:layout_width="50dp"
+                            android:layout_height="32dp"
+                            app:cornerRadius="28dp"
+                            android:layout_marginTop="20dp"
+                            android:layout_marginStart="10dp"
+                            app:icon="@drawable/notifications_ic"
+                            app:iconGravity="textStart"
+                            app:iconPadding="0dp"
+                            app:iconSize="20dp"
+                            app:iconTint="@color/white"
+                            app:layout_constraintStart_toEndOf="@+id/btnsort"
+                            app:layout_constraintTop_toTopOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+        </FrameLayout>
+
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/navigation_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            app:menu="@menu/drawer_menu"
+            app:headerLayout="@layout/header"
+            android:layout_gravity="start">
+        </com.google.android.material.navigation.NavigationView>
+
+</androidx.drawerlayout.widget.DrawerLayout>
