--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -5,27 +5,25 @@
     style="@style/Toolbar">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
         android:padding="16dp">
         <ImageView
             android:id="@+id/leftArrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_arrow"
-            android:layout_marginTop="28dp"/>
+            android:src="@drawable/ic_arrow" />
+
         <TextView
             android:id="@+id/txtToolbar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="14dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginStart="15dp"
+            android:layout_toEndOf="@id/leftArrow"
             android:gravity="bottom"
             android:text="@string/sign_in"
-            android:layout_toEndOf="@id/leftArrow"
-            android:layout_centerVertical="false"
             android:textColor="@color/white"
             android:textSize="20sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
     </RelativeLayout>
 
 </RelativeLayout>
