--- a/app/src/main/res/layout/activity_find.xml
+++ b/app/src/main/res/layout/activity_find.xml
@@ -8,6 +8,7 @@
     android:fitsSystemWindows="true"
     android:id="@+id/drawer_layout">
 
+
         <FrameLayout
             android:id="@+id/content_frame"
             android:layout_width="match_parent"
@@ -62,13 +63,14 @@
                             app:layout_constraintStart_toStartOf="parent" />
 
                         <com.google.android.material.button.MaterialButton
-                            android:id="@+id/btnsort"
+                            android:id="@+id/btnMenu"
                             style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                             android:layout_width="32dp"
                             android:layout_height="32dp"
                             app:cornerRadius="28dp"
                             android:layout_margin="20dp"
                             app:icon="@drawable/ellipsis"
+                            android:backgroundTint="#8003DAC5"
                             app:iconGravity="textStart"
                             app:iconPadding="0dp"
                             app:iconSize="10dp"
@@ -86,12 +88,12 @@
                             app:cornerRadius="28dp"
                             app:icon="@drawable/notifications_ic"
                             app:iconGravity="textStart"
+                            android:backgroundTint="#8003DAC5"
                             app:iconPadding="0dp"
                             app:iconSize="20dp"
                             app:iconTint="@color/white"
-                            app:layout_constraintStart_toEndOf="@+id/btnsort"
+                            app:layout_constraintStart_toEndOf="@+id/btnMenu"
                             app:layout_constraintTop_toTopOf="parent" />
-
 
                         <ImageView
                             android:id="@+id/reddot"
@@ -105,7 +107,22 @@
                             app:layout_constraintTop_toTopOf="@+id/btnNofication"
                             android:visibility="gone"/>
 
-
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/btnReset"
+                            android:layout_width="250dp"
+                            android:layout_height="43dp"
+                            android:layout_marginTop="15dp"
+                            app:cornerRadius="28dp"
+                            android:text="Sort by city"
+                            app:iconTint="@color/white"
+                            android:textSize="10dp"
+                            android:backgroundTint="#8003DAC5"
+                            android:gravity="center"
+                            android:visibility="invisible"
+                            android:textColor="@color/white"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@+id/btnNofication"
+                            app:layout_constraintTop_toTopOf="parent" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
         </FrameLayout>
 
@@ -115,7 +132,8 @@
             android:layout_height="match_parent"
             app:menu="@menu/drawer_menu"
             app:headerLayout="@layout/header"
-            android:layout_gravity="start">
+            android:layout_gravity="start"
+            android:background="@color/darkmode">
         </com.google.android.material.navigation.NavigationView>
 
 </androidx.drawerlayout.widget.DrawerLayout>
