--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,13 +16,14 @@
         />
 
     <TextView
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginTop="40dp"
         android:text="GoJob"
         android:textColor="@color/teal_200"
         android:textSize="45sp"
         android:textStyle="bold"
-        android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -89,13 +90,14 @@
         android:layout_marginStart="50dp"
         android:layout_marginBottom="36dp"
         android:layout_marginEnd="50dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/round_bg"
         android:gravity="center"
         android:text="@string/sign_up"
         android:textSize="18sp"
         android:textColor="@color/white"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/btnVietnamese"
+        app:layout_constraintTop_toBottomOf="@+id/btnsignIn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
