--- a/app/src/main/res/layout/activity_signup2.xml
+++ b/app/src/main/res/layout/activity_signup2.xml
@@ -62,6 +62,7 @@
             android:padding="10dp"
             android:text="Recruiter"
             android:textAlignment="textStart"
+            android:visibility="visible"
             android:textColor="@color/darkmodedfont"
             android:textSize="25sp" />
     </RadioGroup>
