--- a/app/src/main/res/layout/item_job_container.xml
+++ b/app/src/main/res/layout/item_job_container.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="90dp"
     android:layout_margin="3dp"
-    android:background="@drawable/bordered_edittext" >
+    android:background="@drawable/bordered_edittext"
+    android:id="@+id/LayoutJob">
 
 
     <TextView
