--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="darkmode">#FFFFFFFF</color>
+    <color name="darkmode">#FFFFFF</color>
     <color name="darkmodedfont">#000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="Mint">#FF03DAC5</color>
