--- a/app/src/main/res/layout/activity_job_create.xml
+++ b/app/src/main/res/layout/activity_job_create.xml
@@ -344,7 +344,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:hint="Work address*"
+            android:hint="@string/work_address"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/line2">
