--- a/app/src/main/res/layout/activity_companycolletion.xml
+++ b/app/src/main/res/layout/activity_companycolletion.xml
@@ -36,7 +36,7 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Your Company Avatar"
+            android:text="@string/your_company_avatar"
             android:textSize="30sp"
             app:layout_constraintTop_toBottomOf="@+id/toolbarid"
             android:gravity="center_vertical"
@@ -56,7 +56,7 @@
             android:layout_marginEnd="20dp"
             android:layout_marginTop="10dp"
             android:gravity="center_vertical"
-            android:hint="Company Name*"
+            android:hint="@string/company_name"
             android:singleLine="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView2" />
