--- a/app/src/main/res/layout/activity_job_manage.xml
+++ b/app/src/main/res/layout/activity_job_manage.xml
@@ -181,7 +181,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/findCadi"
-            android:text="Find candidates"
+            android:text="@string/find_candidates"
             android:layout_width="match_parent"
             android:layout_marginHorizontal="10dp"
             android:layout_height="60dp"
@@ -219,7 +219,7 @@
             android:id="@+id/viewApply"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:text="View Apply"
+            android:text="@string/view_apply"
             app:cornerRadius="25dp"
             android:layout_marginHorizontal="10dp"
             android:gravity="center"
@@ -244,7 +244,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:gravity="center"
-            android:text="Accept List"
+            android:text="@string/accept_list"
             android:textSize="20dp"
             android:layout_marginHorizontal="10dp"
             app:cornerRadius="25dp"
