--- a/app/src/main/res/layout/activity_jobseekercolletion.xml
+++ b/app/src/main/res/layout/activity_jobseekercolletion.xml
@@ -36,8 +36,8 @@
             android:id="@+id/txteIntroduce"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
-            android:gravity="left"
+            android:layout_margin="20dp"
+            android:gravity="center"
             android:hint="@string/introduce_you_self"
             android:inputType="textMultiLine"
             android:maxLength="250"
