--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -53,7 +53,7 @@
         android:layout_marginRight="10dp"
         android:imeOptions="actionDone"
         android:singleLine="true"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@+id/txtemail"
