--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="bottom|center"
-        android:text="GoJob -  Everytime - Everywhere"
+        android:text="@string/gojob_everytime_everywhere"
         android:textColor="@color/Mint"
         android:textSize="15sp"
         android:textStyle="bold"
