--- a/app/src/main/res/layout/activity_careerfield.xml
+++ b/app/src/main/res/layout/activity_careerfield.xml
@@ -20,8 +20,10 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbarid" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbarid"
+        app:layout_constraintVertical_bias="0.0" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnnextstep"
