--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -12,4 +12,6 @@
     <color name="Mint">#FF03DAC5</color>
     <color name="gray">#000000</color>
     <color name="Darkgray">#454545</color>
+    <color name="darkmodeCard">#222222</color>
+    <color name="darkmodebackgroungbelow">#0E0E0E</color>
 </resources>
